...
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/fridge_clean_home">

            <Button
                android:id="@+id/coolNote1"
                android:layout_width="60dp"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
...
                android:background="@drawable/note_home"
                android:onClick="@{(v)-> homeVM.openFullCoolNote(v)}"
                android:tag="1"
                android:text="@{homeVM.liveDataCNList[0].getTitle()}"
                android:visibility="@{homeVM.liveDataVisibilityList[0] ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/coolNote2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.435" />


            <Button
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.435" />

            <Button
                android:id="@+id/coolNote3"
                android:layout_width="60dp"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/coolNote2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.435" />

            <Button
                android:id="@+id/coolNote4"
                android:layout_width="60dp"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
...
                android:background="@drawable/note_home"
                android:onClick="@{(v)-> homeVM.openFullCoolNote(v)}"
                android:tag="4"
                android:text="@{homeVM.liveDataCNList[3].getTitle()}"
                android:visibility="@{homeVM.liveDataVisibilityList[3] ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/coolNote5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.683" />

            <Button
                android:id="@+id/coolNote5"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.683" />

            <Button
                android:id="@+id/coolNote6"
                android:layout_width="60dp"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/coolNote5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.683" />

            <Button
                android:id="@+id/coolNote7"
                android:layout_width="60dp"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
...
                android:background="@drawable/note_home"
                android:onClick="@{(v)-> homeVM.openFullCoolNote(v)}"
                android:tag="7"
                android:text="@{homeVM.liveDataCNList[6].getTitle()}"
                android:visibility="@{homeVM.liveDataVisibilityList[6] ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/coolNote8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/coolNote8"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/coolNote9"
                android:layout_width="60dp"
                android:layout_height="76dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
...
