...
    <FrameLayout
        android:id="@+id/placeholder_frame_fullCN"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/fullCN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/note_big"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/back_button"
                    android:onClick="@{fullNoteVM::goBack}"
...
                    android:background="@drawable/minus_button"
                    android:onClick="@{fullNoteVM::popUp}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/magnet_CN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
...
                        android:text="@{fullNoteVM.liveDataCreateTime}"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="89dp"
                        android:fontFamily="@font/commonsregular"
                        android:maxLength="20"
                        android:text="@{fullNoteVM.liveDataTitle}"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/content2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/title2"
                        android:fontFamily="@font/commonsregular"
                        android:maxLength="300"
...
