<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="coolNoteVM"
            type="edu.kit.pse.fridget.client.viewmodel.CreateCoolNoteViewModel" />
    </data>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <FrameLayout
        android:id="@+id/placeholder_frame_createCN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cdfeed"
        android:padding="5dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/createCN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fridge_face">

            <RelativeLayout
                android:layout_width="329dp"
                android:layout_height="321dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.878">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="68dp"
                    android:layout_height="41dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/contentBox"
                    android:layout_marginTop="17dp"
                    android:fontFamily="@font/commonsregular"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/enterTitle"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="38dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/commonsregular"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:text="@={coolNoteVM.liveDataTitle}"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/title"
                    android:layout_below="@+id/title"
                    android:fontFamily="@font/commonsregular"
                    android:text="@string/content"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <View
                    android:id="@+id/contentBox"
                    android:layout_width="276dp"
                    android:layout_height="42dp"
                    android:layout_alignEnd="@+id/enterTitle"
                    android:layout_alignTop="@+id/contentBox3"
                    android:background="#7beeff"
                    app:layout_constraintBottom_toBottomOf="@+id/contentBox2"
                    app:layout_constraintEnd_toEndOf="@+id/contentBox2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/contentBox2"
                    app:layout_constraintTop_toTopOf="@+id/contentBox2"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/contentBox2"
                    android:layout_width="278dp"
                    android:layout_height="44dp"
                    android:layout_alignStart="@+id/title"
                    android:layout_below="@+id/content"
                    android:background="@drawable/box"
                    app:layout_constraintBottom_toBottomOf="@+id/contentBox3"
                    app:layout_constraintEnd_toEndOf="@+id/contentBox3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/contentBox3"
                    app:layout_constraintTop_toTopOf="@+id/contentBox3"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/contentBox3"
                    android:layout_width="278dp"
                    android:layout_height="166dp"
                    android:layout_alignStart="@+id/title"
                    android:layout_below="@+id/content"
                    android:background="@drawable/box"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.228"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/content" />

                <EditText
                    android:id="@+id/enterContent"
                    android:layout_width="277dp"
                    android:layout_height="122dp"
                    android:layout_alignStart="@+id/title"
                    android:layout_below="@+id/contentBox"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/commonsregular"
                    android:maxLength="300"
                    android:padding="2dp"
                    android:text="@={coolNoteVM.styledContent.liveDataPlainContent}"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:gravity="top|start"
                    app:layout_constraintBottom_toBottomOf="@+id/contentBox2"
                    app:layout_constraintEnd_toEndOf="@+id/contentBox3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/contentBox3"
                    app:layout_constraintTop_toBottomOf="@+id/italicButton"
                    app:layout_constraintVertical_bias="0.0" />

                <ToggleButton
                    android:id="@+id/boldButton"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/contentBox"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="36dp"
                    android:fontFamily="@font/commonsregular"
                    android:textOn="B"
                    android:textOff="B"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:checked="@{coolNoteVM.styledContent.liveDataBold}"
                    android:onClick="@{() -> coolNoteVM.styledContent.toggleBold()}"
                    app:layout_constraintBottom_toBottomOf="@+id/italicButton"
                    app:layout_constraintEnd_toStartOf="@+id/italicButton"
                    app:layout_constraintHorizontal_bias="0.318"
                    app:layout_constraintStart_toStartOf="@+id/contentBox3"
                    app:layout_constraintTop_toTopOf="@+id/italicButton"
                    app:layout_constraintVertical_bias="0.0" />

                <ToggleButton
                    android:id="@+id/italicButton"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/contentBox"
                    android:layout_alignStart="@+id/postButton"
                    android:fontFamily="@font/commonsregular"
                    android:textOn="I"
                    android:textOff="I"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:checked="@{coolNoteVM.styledContent.liveDataItalic}"
                    android:onClick="@{() -> coolNoteVM.styledContent.toggleItalic()}"
                    app:layout_constraintBottom_toBottomOf="@+id/contentBox2"
                    app:layout_constraintEnd_toEndOf="@+id/contentBox3"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="@+id/contentBox3"
                    app:layout_constraintTop_toTopOf="@+id/contentBox2"
                    app:layout_constraintVertical_bias="0.666" />

                <ToggleButton
                    android:id="@+id/underlineButton"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/contentBox"
                    android:layout_toEndOf="@+id/postButton"
                    android:fontFamily="@font/commonsregular"
                    android:textOn="U"
                    android:textOff="U"
                    android:textSize="15sp"
                    android:checked="@{coolNoteVM.styledContent.liveDataUnderline}"
                    android:onClick="@{() -> coolNoteVM.styledContent.toggleUnderline()}"
                    app:layout_constraintBottom_toTopOf="@+id/enterContent"
                    app:layout_constraintEnd_toEndOf="@+id/contentBox3"
                    app:layout_constraintHorizontal_bias="0.829"
                    app:layout_constraintStart_toEndOf="@+id/italicButton"
                    app:layout_constraintTop_toTopOf="@+id/italicButton"
                    app:layout_constraintVertical_bias="0.437" />

                <Button
                    android:id="@+id/postButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/commonsregular"
                    android:onClick="@{coolNoteVM::postCoolNote}"
                    android:text="@string/postIt"
                    android:textSize="15sp" />

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="top|end"
            android:background="@drawable/back_button"
            android:onClick="@{coolNoteVM::goBack}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </FrameLayout>

    </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#D6FFD0"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_view"
            android:visibility="visible"/>

    </android.support.v4.widget.DrawerLayout>

</layout>